css/main.css
/* ... */
/* Mobile View */
@media screen and (max-width: 375px) {
  .block {
    width: 100%;
  }

  #multiple_products .block {
    width: 90%;
  }

  .content_container {
    margin: 0;
    width: 100%;
  }

  .mobile-links {
    width: 86%;
  }

  #main_footer {
    flex-direction: column;
    width: 100%;
  }

  .footer-items-form {
    flex-direction: column;
  }

  #subscribe-news-input, #subscribe-news-btn {
    width: 100%;
    text-align: center;
    margin: 0;
  }

  #subscribe-news-btn {
    margin-top: 0.5rem;
  }

  #main_footer #footer-newsletter, #main_footer #footer-nav {
    width: 100%;
  }

  #main_footer #footer-newsletter .block, #main_footer #footer-nav .block {
    width: 100%;
  }

  .footer-social-media ul.icon_lists {
    text-align: left;
  }

  #featured_products .block {
    width: 44%;
    margin: 0.5rem;
  }

  .product_image {
    width: 100%;
    margin-bottom: 2rem;
  }

  .product_name {
    font-size: 1.5rem;
  }

  .price {
    font-size: 0.85rem;
  }

  .product_details {
    width: 100%;
    margin-top: -2.5rem;
  }

  .product_select {
    width: 8rem;
  }

  .atc-btn {
    width: 100%;
    text-align: center;
    margin-bottom: 3rem;
  }

  .checkout_prod_img {
    width: 45%;
    height: 45%;
    padding: 0.5rem;
    vertical-align: center;
  }

  .checkout_product_info {
    padding: 0;
    width: 100%;
  }

  .checkout_product_color {
    font-size: 0.6rem;
  }

  .checkout_quantity, .checkout_price {
    width: 1rem;
  }

  #payment_order_form .block {
    margin: 60px 0 0 0;
    width: 100%;
  }

  .main_nav_item {
    font-size: 0.6rem;
  }

  iframe {
    width: auto;
    height: auto;
  }

}

/* Extra @media setting for journal.html, journal_detail.html, and about.html */

@media screen and (max-width: 1199px) {
  /* responsive for journal */
  .items-text {
    margin-top: 2vw;
  }

  .items-text img {
    margin-top: 5vw;
  }

  #journal{
    margin-top: 5vw;
  }

  .ariticle-title p {
    line-height: 2.2vw;
  }
}

@media screen and (max-width: 1024px) {
  /* responsive for journal */
  .items-text h1{
    left: 20vw;
  }

    .ariticle-title p {
      font-size: 1rem;
    }

    /* responsive for about */
    #about {
      margin-top: 0;
    }

  /* responsive for citations*/
  #citations_title h1 {
    padding-top: 5vw;
  }
}

@media screen and (max-width: 959px) {
  .items-text h1 {
    font-size: 15vw;
    left: 20vw;
  }

  .items-text img {
    left: 5%;
  }

/* responsive for journal article*/

  #article {
    display: grid;
  	grid-template-columns: 1% 30% 50%;
    margin-top: 10vw;
  }

  .article-image-items p {
   font-size: .5vw;
  }

  .article-image-items h1 {
    font-size:5vw;
  }

  .article-image-items h5 {
    font-size:1vw;
  }

  .ariticle-title {
    padding-right: 0px;
  }

  #author {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  /* responsive for journal */
  .items-text h1 {
    margin-top: 25vw;
  }

  .box {
    padding: 20px;
  }

  .ariticle-title p {
    line-height: 2.5vw;
  }
  /* responsive for lookbooks */
  .slideshow-container {
    margin-left: 8rem;
    margin-right: 8rem;
  }

  .lookbook_time {
    margin-top: 1.5rem;
  }

  .prev {
    right: 60vw;
  }

  .next {
    left: 60vw;
  }
}

@media screen and (max-width: 640px){

  .ariticle-title p {
    line-height: 3.5vw;
  }
}


@media screen and (max-width: 414px) {
  /* responsive for about */
  #about {
    display: block;
    margin-top: 0;
  }

  .about-detail p {
    font-size: 12px;
  }

  #about-img-item img {
    width:300px;
    height: 150px;
  }

  .about-header h2 {
    text-align: center;
  }

  .about-header h4 {
    text-align: center;
  }

  .about-detail img {
    margin-top: 1vw;
  }

  ul.icon_lists {
    text-align: center;
  }

  /* responsive for journal */
  .items-text {
    background-size: 88%;
    margin-top: 2rem;
    text-align: center;
  }

  .items-text h1 {
    margin: 80px 0 0 0; /* journal title is in same spot as other page titles */
    color: #000;
    font-size: 1.6rem;
    text-shadow: none;
    text-transform: none;
    padding: 0 18vw;
  }

  .items-text img {
    display: none;
  }

  #journal {
    margin-top: 80px;
  }

  .main_journal {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 0;
  }

  /* responsive for journal article*/

  #article {
     display: block;
     margin-top: 20vw;
     margin-left: 5vw;
     margin-right: 5vw;
   }

  #square {
    width: 100%;
    height: 10vh;
  }

  .article-image-items {
    margin-top: -20vw;
  }

  .article-image-items h1 {
    padding-left: 2vw;
    padding-right: 2vw;
  }

  .article-image-items h5 {
    display: none;
  }

  .article-image{
    margin-top: 15vw;
    position: relative;
    left: 25vw;
  }

  .article-image img {
    display: inline-block;
    width: 30vw;
    height: 25vw;
    margin-right: 4vw;
  }

  .ariticle-title p {
    margin-top: 10vw;
    font-size: 1.1rem;
    line-height: 6vw;
  }

   .ariticle-title {
    margin-bottom: 40vw;
   }

   #author {
     display: none;
   }

   /* responsive for citations */
   #citations_title h1 {
     padding-top: 10vw;
   }

   /* responsive for lookbooks */
   .lookbook_name {
     font-size: 1rem;
   }

   .lookbook_time {
     margin-top: 1.5rem;
   }

   .slideshow-container {
     margin-left: 3rem;
     margin-right: 3rem;
   }

   .prev {
     /* right: 18rem; */
     display: none;
   }

   .next {
     /* left: 18rem; */
     display: none;
   }

   .slide-number-text {
    font-size: 0.8rem;
  }

  .dot {
    height: 12px;
    width: 12px;
    margin: 20px 10px;
  }
}


@media screen and (max-width: 375px) {
  /* responsive for journal article*/
  #square {
    margin-top: 20vw;
  }

  iframe {
    width: 100%;
  }
}
/* ... */

